# twine

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  TODO.md
.helix/: languages.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  model.rs  problems.rs  step.rs
crates/core/src/problems/: equation.rs  ode.rs  optimization.rs
crates/observers/: Cargo.toml
crates/observers/examples/: plot.rs
crates/observers/src/: lib.rs  plot.rs  traits.rs
crates/solvers/: Cargo.toml
crates/solvers/src/: equation.rs  lib.rs  optimization.rs  transient.rs
crates/solvers/src/equation/: bisection.rs  evaluate.rs
crates/solvers/src/optimization/: evaluate.rs  golden_section.rs  negate.rs
crates/solvers/src/transient/: euler.rs
integration-tests/: Cargo.toml
integration-tests/src/: test_components.rs
integration-tests/tests/: compose_demo.rs  composed.rs
twine-components/: Cargo.toml
twine-components/src/: controller.rs  example.rs  fluid.rs  integrators.rs  interpolation.rs  lib.rs  schedules.rs  thermal.rs  turbomachinery.rs
twine-components/src/controller/: thermostat.rs  types.rs
twine-components/src/controller/thermostat/: cooling.rs  heating.rs  setpoint.rs  types.rs
twine-components/src/example/: area_calculators.rs  math.rs  oscillator.rs
twine-components/src/example/math/: adder.rs  arithmetic.rs  min_max.rs  multiplier.rs
twine-components/src/fluid/: ideal_gas.rs  incompressible_liquid.rs
twine-components/src/integrators/: forward_euler.rs
twine-components/src/interpolation/: error.rs  extrapolate.rs  n.rs  one.rs  three.rs  two.rs
twine-components/src/schedule/: step_schedule.rs
twine-components/src/schedule/step_schedule/: step.rs
twine-components/src/schedules/: step_schedule.rs
twine-components/src/solver/: ode.rs
twine-components/src/thermal/: hx.rs  stratified_tank.rs  stratified_tank_new.rs  tank.rs  tank2.rs
twine-components/src/thermal/hx/: arrangement.rs  capacitance_rate.rs  capacity_ratio.rs  discretized.rs  effectiveness.rs  effectiveness_ntu.rs  functional.rs  ntu.rs  one_fluid.rs  scenario.rs  simulate.rs  stream.rs
twine-components/src/thermal/stratified_tank/: adjacent.rs  buoyancy.rs  energy_balance.rs  environment.rs  fluid.rs  geometry.rs  insulation.rs  layer.rs  location.rs  mass_balance.rs  node.rs  port_flow.rs
twine-components/src/thermal/stratified_tank_new/: energy_balance.rs  fluid.rs  geometry.rs  node.rs
twine-components/src/turbomachinery/: inlet_properties.rs  test_utils.rs  work.rs
twine-components/src/turbomachinery/compressor/: isentropic.rs  types.rs
twine-components/src/turbomachinery/turbine/: isentropic.rs  types.rs
twine-core/: Cargo.toml
twine-core/src/: callable.rs  component.rs  composed.rs  constraint.rs  context.rs  fluid.rs  fraction.rs  graph.rs  integrate.rs  integrator.rs  legacy.rs  lib.rs  model.rs  simulation.rs  thermo.rs  time.rs  transient.rs  twine.rs  types.rs
twine-core/src/component/: chain.rs  inspect.rs  mapped.rs  mapped_err.rs  mapped_error.rs  mapped_input.rs  mapped_output.rs  then.rs
twine-core/src/constraint/: non_negative.rs  non_positive.rs  non_zero.rs  strictly_negative.rs  strictly_positive.rs  unit_interval.rs
twine-core/src/constraint/unit_interval/: closed.rs  left_open.rs  lower_open.rs  open.rs  right_open.rs  upper_open.rs
twine-core/src/integrate/: ode.rs
twine-core/src/integrate/ode/: oscillator.rs
twine-core/src/simulation/: test_utils.rs  traits.rs
twine-core/src/simulation/integrators/: forward_euler.rs
twine-core/src/simulation/test_utils/: moving_point.rs
twine-core/src/simulation/traits/: has_time.rs  stateful_component.rs
twine-core/src/solve/: ode.rs
twine-core/src/thermo/: fluid.rs  units.rs
twine-core/src/thermo/units/: extensions.rs  positive_mass_rate.rs  temperature_difference.rs
twine-core/src/transient/: controllers.rs  integrators.rs  simulation.rs  test_utils.rs  time_derivative.rs  traits.rs  transient_simulation.rs  types.rs
twine-core/src/transient/controllers/: no_controller.rs  pass_through.rs
twine-core/src/transient/integrators/: advance_time.rs  forward_euler.rs
twine-core/src/transient/test_utils/: echo_time.rs  moving_point.rs
twine-core/src/transient/traits/: controller.rs  integrator.rs  state_integrator.rs  stateful.rs  temporal.rs  time.rs
twine-core/src/transient/types/: time_increment.rs
twine-core/src/twine/: closure.rs  error.rs  function.rs  identity.rs  then.rs
twine-core/src/types/: non_negative.rs
twine-dev/: Cargo.toml
twine-dev/src/: lib.rs  main.rs
twine-dev/static/: index.html
twine-examples/: Cargo.toml
twine-examples/examples/: compose_demo.rs  dev_server.rs  plotting.rs  tanks_in_room.rs
twine-examples/examples/stratified_tank/: main.rs  model.rs  plotting.rs  simulation.rs
twine-macros/: Cargo.toml
twine-macros/src/: composable.rs  compose.rs  lib.rs  time_independent.rs  time_integrable.rs  utils.rs
twine-macros/src/compose/: extract.rs  generate.rs  graph.rs  model.rs  parse.rs
twine-macros/src/compose/model/: graph.rs
twine-macros/tests/: compose_demo.rs  define_component.rs
twine-macros/tests/test_components/: mod.rs
twine-plot/: Cargo.toml
twine-plot/src/: lib.rs
twine-thermo/: Cargo.toml
twine-thermo/src/: capability.rs  control_volume.rs  error.rs  flow.rs  fluid.rs  fluids.rs  lib.rs  model.rs  models.rs  properties.rs  state.rs  stream.rs  units.rs
twine-thermo/src/capability/: properties.rs  state_from.rs
twine-thermo/src/flow/: heat.rs  mass.rs  work.rs
twine-thermo/src/fluid/: air.rs  carbon_dioxide.rs  custom.rs  water.rs
twine-thermo/src/fluid/custom/: ideal_gas.rs  incompressible.rs
twine-thermo/src/fluids/: air.rs  carbon_dioxide.rs  custom.rs  water.rs
twine-thermo/src/model/: coolprop.rs  ideal_gas.rs  ideal_gas_eos.rs  incompressible.rs  perfect_gas.rs  traits.rs
twine-thermo/src/models/: ideal_gas.rs  incompressible.rs
twine-thermo/src/properties/: error.rs  ideal_gas.rs  incompressible.rs  thermodynamic.rs
twine-thermo/src/units/: temperature_difference.rs
(+92 files in other folders)
