[workspace]
resolver = "2"

members = [
  "twine-components",
  "twine-core",
  "twine-examples",
  "twine-macros",
  "twine-plot",
  "twine-thermo",
]

[workspace.package]
version = "0.4.1"
edition = "2024"
authors = ["Isentropic Development <info@isentropic.dev>"]
license = "MIT"
repository = "https://github.com/isentropic-dev/twine"
readme = "README.md"

[workspace.dependencies]
approx = "0.5.1"
thiserror = "2.0.12"
uom = "0.37.0"
twine-components = { version = "0.4.1", path = "twine-components" }
twine-core = { version = "0.4.1", path = "twine-core" }
twine-macros = { version = "0.4.1", path = "twine-macros" }
twine-plot = { version = "0.4.1", path = "twine-plot" }
twine-thermo = { version = "0.4.1", path = "twine-thermo" }
