[workspace]
resolver = "2"

members = ["crates/core", "crates/solvers"]

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Isentropic Development <info@isentropic.dev>"]
license = "MIT"
repository = "https://github.com/isentropic-dev/twine"
readme = "README.md"

[workspace.dependencies]
approx = "0.5.1"
thiserror = "2.0.12"
twine-core = { version = "0.5.0", path = "crates/core" }
