[package]
name = "twine-components"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "A collection of components for Twine, a Rust framework for functional and composable system modeling."
keywords = ["twine", "framework", "functional", "composable", "modeling", "components"]

[dependencies]
twine-core = { version = "0.2.0", path = "../twine-core" }
serde = { version = "1.0", features = ["derive"] }
uom = { workspace = true, features = ["serde"] }
ndarray = "0.16.1"
ninterp = "0.6.3"
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
