[package]
name = "twine-components"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "A collection of components for Twine, a Rust framework for functional and composable system modeling."
keywords = ["twine", "framework", "modeling", "components"]

[dependencies]
twine-core = { workspace = true }
twine-thermo = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
uom = { workspace = true, features = ["serde"] }
ndarray = "0.16.1"
ninterp = "0.6.3"
thiserror = { workspace = true }
jiff = { version = "0.2.15", features = ["serde"] }

[dev-dependencies]
approx = { workspace = true }
