[package]
name = "twine-core"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Isentropic Development <info@isentropic.dev>"]
description = "A Rust framework for functional and composable system modeling."
repository = "https://github.com/isentropic-dev/twine"
readme = "../README.md"
keywords = ["twine", "framework", "functional", "composable", "modeling"]

[dependencies]
petgraph = "0.7.1"
uom = "0.36.0"
