[package]
name = "twine-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "A Rust framework for functional and composable system modeling."
keywords = ["twine", "framework", "functional", "composable", "modeling"]

[dependencies]
petgraph = "0.7.1"
thiserror = { workspace = true }
uom = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
