[package]
name = "twine-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
twine-core = { version = "0.2.0", path = "../twine-core" }
twine-components = { version = "0.2.0", path = "../twine-components" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
uom.workspace = true
