[package]
name = "twine-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Example applications for Twine, a Rust framework for functional and composable system modeling."
keywords = ["twine", "framework", "examples", "demo"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
twine-core = { path = "../twine-core" }
twine-components = { path = "../twine-components" }
twine-dev = {path = "../twine-dev"}
twine-macros = { path = "../twine-macros" }
twine-plot = { path = "../twine-plot" }
twine-thermo = { path = "../twine-thermo" }
uom = { workspace = true }
jiff = "0.2.15"
