[package]
name = "twine-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Example applications for Twine, a Rust framework for functional and composable system modeling."
keywords = ["twine", "framework", "examples", "demo"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
twine-core = { workspace = true }
twine-components = { workspace = true }
twine-macros = { workspace = true }
twine-plot = { workspace = true }
twine-thermo = { workspace = true }
uom = { workspace = true }
jiff = "0.2.15"
