[package]
name = "twine-macros"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Isentropic Development <info@isentropic.dev>"]
description = "Macros for Twine, a Rust framework for functional and composable system modeling."
repository = "https://github.com/isentropic-dev/twine"
readme = "../README.md"
keywords = ["twine", "macros", "proc-macro"]

[dependencies]
twine-core = { version = "0.1", path = "../twine-core" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [
  "full",
  "extra-traits",
  "visit",
  "visit-mut",
] }
heck = "0.5.0"

[lib]
proc-macro = true
doctest = false

[dev-dependencies]
itertools = "0.14.0"
