[package]
name = "twine-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Macros for Twine, a Rust framework for functional and composable system modeling."
keywords = ["twine", "framework", "macros", "proc-macro"]

[dependencies]
twine-core = { version = "0.4.0", path = "../twine-core" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [
  "full",
  "extra-traits",
  "visit",
  "visit-mut",
] }
heck = "0.5.0"

[lib]
proc-macro = true
doctest = false

[dev-dependencies]
itertools = "0.14.0"
