[package]
name = "twine-plot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Plotting utilities for Twine, a Rust framework for functional and composable system modeling."
repository.workspace = true
readme.workspace = true
keywords = [
  "twine",
  "framework",
  "functional",
  "composable",
  "modeling",
  "plotting",
  "visualization",
]

[dependencies]
eframe = "0.31.1"
egui_plot = "0.31.0"
