[package]
name = "twine-plot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Plotting utilities for Twine, a Rust framework for functional and composable system modeling."
keywords = ["twine", "framework", "plotting", "visualization"]

[dependencies]
eframe = "0.31.1"
egui_plot = "0.31.0"
