[package]
name = "twine-thermo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Thermodynamic and fluid property modeling for the Twine framework."
keywords = ["twine", "framework", "modeling", "thermodynamics", "fluid"]

[dependencies]
twine-core = { version = "0.3.0", path = "../twine-core" }
thiserror = { workspace = true }
uom = { workspace = true }
rfluids = { version = "0.2.1", optional = true }

[features]
default = []
coolprop = ["dep:rfluids"]

[dev-dependencies]
approx = { workspace = true }
