[package]
name = "twine-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "A Rust framework for defining and solving numerical problems."
keywords = ["twine", "framework", "modeling", "problems", "solvers"]
